Filter buttons auto-select on query

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -131,3 +131,11 @@ html, body {
     }
   }
 }
+
+.link-to-filtered-services {
+  position: absolute;
+  width: 90%;
+  height: 100%;
+  right: 10px;
+  z-index: 1000;
+}
