--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,8 @@
     <button data-action="click->scroll#scrollLeft" class="btn-scroll">&#10094;</button>
         <div class="card-container" data-scroll-target="cards">
           <!-- Card for Dog -->
-          <div class="col-md-3 mb-3">
+          <div class="col-md-3 mb-3" style="position: relative;">
+          <%= link_to "", "/services?filters=Dog", class: "link-to-filtered-services" %>
             <div class="card text-center">
               <div class="card-img" style="background-image: url('https://images.unsplash.com/photo-1554692918-08fa0fdc9db3?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); height: 200px; background-size: cover; background-position: center;"></div>
               <div class="card-body">
@@ -26,7 +27,8 @@
           </div>
 
           <!-- Card for Cat -->
-          <div class="col-md-3 mb-3">
+          <div class="col-md-3 mb-3" style="position: relative;">
+          <%= link_to "", "/services?filters=Cat", class: "link-to-filtered-services" %>
             <div class="card text-center">
               <div class="card-img" style="background-image: url('https://images.unsplash.com/photo-1596854273338-cbf078ec7071?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); height: 200px; background-size: cover; background-position: center;"></div>
               <div class="card-body">
@@ -36,7 +38,8 @@
           </div>
 
           <!-- Card for Kangaroo -->
-          <div class="col-md-3 mb-3">
+          <div class="col-md-3 mb-3" style="position: relative;">
+          <%= link_to "", "/services?filters=Kangaroo", class: "link-to-filtered-services" %>
             <div class="card text-center">
               <div class="card-img" style="background-image: url('https://images.unsplash.com/photo-1611489473774-5d881f1153f1?q=80&w=3113&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); height: 200px; background-size: cover; background-position: center;"></div>
               <div class="card-body">
@@ -46,7 +49,8 @@
           </div>
 
           <!-- Card for Rabbit -->
-          <div class="col-md-3 mb-3">
+          <div class="col-md-3 mb-3" style="position: relative;">
+          <%= link_to "", "/services?filters=Rabbit", class: "link-to-filtered-services" %>
             <div class="card text-center">
               <div class="card-img" style="background-image: url('https://images.unsplash.com/photo-1591382386627-349b692688ff?q=80&w=2848&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); height: 200px; background-size: cover; background-position: center;"></div>
                 <div class="card-body">
@@ -56,7 +60,8 @@
           </div>
 
           <!-- Card for Guinea Pig -->
-          <div class="col-md-3 mb-3">
+          <div class="col-md-3 mb-3" style="position: relative;">
+          <%= link_to "", "/services?filters=Guinea Pig", class: "link-to-filtered-services" %>
             <div class="card text-center">
               <div class="card-img" style="background-image: url('https://images.unsplash.com/photo-1612267168669-679c961c5b31?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); height: 200px; background-size: cover; background-position: center;"></div>
               <div class="card-body">
@@ -66,7 +71,8 @@
           </div>
 
           <!-- Card for Ferret -->
-          <div class="col-md-3 mb-3">
+          <div class="col-md-3 mb-3" style="position: relative;">
+          <%= link_to "", "/services?filters=Ferret", class: "link-to-filtered-services" %>
             <div class="card text-center">
               <div class="card-img" style="background-image: url('https://images.unsplash.com/photo-1615087240969-eeff2fa558f2?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); height: 200px; background-size: cover; background-position: center;"></div>
               <div class="card-body">
@@ -76,7 +82,8 @@
           </div>
 
           <!-- Card for Snake -->
-          <div class="col-md-3 mb-3">
+          <div class="col-md-3 mb-3" style="position: relative;">
+          <%= link_to "", "/services?filters=Snake", class: "link-to-filtered-services" %>
             <div class="card text-center">
               <div class="card-img" style="background-image: url('https://images.unsplash.com/photo-1538439907460-1596cafd4eff?q=80&w=2956&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); height: 200px; background-size: cover; background-position: center;"></div>
               <div class="card-body">
