--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -13,43 +13,43 @@
     </div>
     <hr>
     <div class="filter-buttons-container">
-      <div class="filter-button">
+      <div class="filter-button" data-filtered-queries-target="Dog">
         <button class="filter-dog-button" data-action="click->filtered-queries#highlight" data-filtered-queries-dog-value="">
           <%= image_tag "icons/dog.svg", class: "icon" %>
           <p>dog</p>
         </button>
       </div>
-      <div class="filter-button">
+      <div class="filter-button" data-filtered-queries-target="Cat">
         <button class="filter-cat-button" data-action="click->filtered-queries#highlight" data-filtered-queries-cat-value="">
           <%= image_tag "icons/cat.svg", class: "icon" %>
           <p>cat</p>
         </button>
       </div>
-      <div class="filter-button">
+      <div class="filter-button" data-filtered-queries-target="Kangaroo">
         <button class="filter-kangaroo-button" data-action="click->filtered-queries#highlight" data-filtered-queries-kangaroo-value="">
           <%= image_tag "icons/kangaroo.svg", class: "icon" %>
           <p>kangaroo</p>
         </button>
       </div>
-      <div class="filter-button">
+      <div class="filter-button" data-filtered-queries-target="Rabbit">
         <button class="filter-rabbit-button" data-action="click->filtered-queries#highlight" data-filtered-queries-rabbit-value="">
           <%= image_tag "icons/rabbit.svg", class: "icon" %>
           <p>rabbit</p>
         </button>
       </div>
-      <div class="filter-button">
+      <div class="filter-button" data-filtered-queries-target="Ferret">
         <button class="filter-ferret-button" data-action="click->filtered-queries#highlight" data-filtered-queries-ferret-value="">
           <%= image_tag "icons/ferret.svg", class: "icon" %>
           <p>ferret</p>
         </button>
       </div>
-      <div class="filter-button">
+      <div class="filter-button" data-filtered-queries-target="Snake">
         <button class="filter-snake-button" data-action="click->filtered-queries#highlight" data-filtered-queries-snake-value="">
           <%= image_tag "icons/snake.svg", class: "icon" %>
           <p>snake</p>
         </button>
       </div>
-      <div class="filter-button">
+      <div class="filter-button" data-filtered-queries-target="GuineaPig">
         <button class="filter-guinea-pig-button" data-action="click->filtered-queries#highlight" data-filtered-queries-pig-value="">
           <%= image_tag "icons/guinea-pig.svg", class: "icon" %>
           <p>guinea pig</p>
