--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -37,84 +37,12 @@
 
   <br>
   <br>
-  <!-- Services List and Description Row -->
-  <div class="row">
-    <!-- Services List Column -->
-    <div class="col-md-4 d-flex">
-      <div class="card shadow flex-fill" style="border-radius: 15px;">
-        <div class="card-body">
-          <h5 class="card-title">Other services - by <%= @service.user.first_name %></h5>
-          <ul class="list-group list-group-flush">
-            <% @service.user.services.each do |other_service| %>
-              <li class="list-group-item">
-                <div class="d-flex justify-content-between">
-                <%= link_to other_service.title, service_path(other_service), class: "d-flex justify-content-between" %>
-                <span><%= number_to_currency(other_service.price.round, unit: '€') %></span>
-                </div>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    </div>
+  <div class="d-flex">
+  <!-- sticky Section -->
 
-    <!-- Service Description Column -->
-    <div class="col-md-8 d-flex">
-      <div class="card shadow flex-fill" style="border-radius: 15px;">
+    <div class="card shadow flex-fill w-75 h-75 sticky-top" style="border-radius: 15px">
         <div class="card-body">
-          <h5 class="card-title">About the <%= @service.title %> service</h5>
-          <p class="card-text"><%= @service.description %></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Map and Booking Form Row -->
-  <div class="row">
-    <!-- Map Section -->
-    <div class="col-md-6">
-      <div class="card shadow my-4" style="height: 400px; border-radius: 15px;">
-        <img src="https://pbs.twimg.com/media/EW2R5lAX0AUmRUj.jpg" alt="Map of Paris" style="height: 100%; width: 100%; object-fit: cover; border-radius: 15px;">
-      </div>      <!-- Include map initialization script here -->
-    </div>
-
-  <!-- Booking Form -->
-    <div class="col-md-6">
-      <div class="card shadow my-4" style="height: 400px; border-radius: 15px;">
-        <div class="card-body">
-          <h5 class="card-title">Book <%= @service.user.first_name %> - Service: <%= @service.title %></h5>
-          <%= simple_form_for([@service, @service.bookings.new], wrapper: :vertical_form, html: { class: 'form-horizontal' }) do |f| %>
-            <div class="form-row">
-              <div class="form-group col-md-8">
-                <%= f.input :date, as: :string, label: 'Choose a date', input_html: { data: { controller: "datepicker" } }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
-                <%= f.input :start_time, as: :time, label: 'Choose a time', input_html: { class: 'form-control' }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
-              </div>
-            </div>
-            <%= f.button :submit, "Book Now", class: "btn btn-primary btn-lg btn-block" %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-
- <!-- About Section -->
-  <div class="row mt-4">
-    <div class="col-12">
-      <div class="card shadow">
-        <div class="card-body">
-          <h5 class="card-title">About <%= @service.user.first_name %></h5>
-          <p class="card-text"><%= @service.description %></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Reviews Section -->
-  <div class="row mt-4">
-    <div class="col-12">
-      <div class="card shadow">
-        <div class="card-body">
-          <h5 class="card-title">Reviews for <%= @service.title %></h5>
+         <h5 class="card-title">Reviews for <%= @service.title %></h5>
           <br>
           <% reviews = @service.bookings.includes(:review).map(&:review).compact %>
           <% if reviews.any? %>
@@ -138,9 +66,73 @@
           <p>No reviews yet for this service.</p>
         <% end %>
         </div>
+    </div>
+
+
+  <!-- Not Sticky Section -->
+    <div class="d-flex flex-column" style="margin-left: 40px">
+      <!-- <About the...> Section -->
+      <div class="d-flex mb-3">
+        <div class="card shadow flex-fill" style="border-radius: 15px;">
+          <div class="card-body">
+            <h5 class="card-title">About the <%= @service.title %> service</h5>
+            <p class="card-text"><%= @service.description %></p>
+          </div>
+        </div>
       </div>
+
+      <!-- Booking Form Section-->
+      <div class="card shadow mb-3" style="height: 400px; border-radius: 15px;">
+        <div class="card-body">
+          <h5 class="card-title">Book <%= @service.user.first_name %> - Service: <%= @service.title %></h5>
+          <%= simple_form_for([@service, @service.bookings.new], wrapper: :vertical_form, html: { class: 'form-horizontal' }) do |f| %>
+            <div class="form-row">
+              <div class="form-group col-md-8">
+                <%= f.input :date, as: :string, label: 'Choose a date', input_html: { data: { controller: "datepicker" } }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
+                <%= f.input :start_time, as: :time, label: 'Choose a time', input_html: { class: 'form-control' }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
+              </div>
+            </div>
+            <%= f.button :submit, "Book Now", class: "btn btn-primary btn-lg btn-block" %>
+          <% end %>
+        </div>
+      </div>
+
+      <!-- Map Section -->
+      <div class="d-flex mb-3">
+        <div class="card shadow w-100" style="height: 400px; border-radius: 15px;">
+          <img src="https://pbs.twimg.com/media/EW2R5lAX0AUmRUj.jpg" alt="Map of Paris" style="height: 100%; width: 100%; object-fit: cover; border-radius: 15px;">
+        </div>      <!-- Include map initialization script here -->
+      </div>
+
+    <!-- About Section -->
+      <div class="d-flex mb-3">
+        <div class="card shadow w-100">
+          <div class="card-body">
+            <h5 class="card-title">About <%= @service.user.first_name %></h5>
+            <p class="card-text"><%= @service.description %></p>
+          </div>
+        </div>
+      </div>
+
+    <!-- Other Services Section -->
+      <div class="d-flex mb-3">
+        <div class="card shadow w-100">
+          <div class="card-body">
+            <h5 class="card-title">Other services - by <%= @service.user.first_name %></h5>
+            <ul class="list-group list-group-flush">
+              <% @service.user.services.each do |other_service| %>
+                <li class="list-group-item">
+                  <div class="d-flex justify-content-between">
+                  <%= link_to other_service.title, service_path(other_service), class: "d-flex justify-content-between" %>
+                  <span><%= number_to_currency(other_service.price.round, unit: '€') %></span>
+                  </div>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-
-
 </div>
