--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -36,3 +36,38 @@
   flex: 0 0 250px; /* flex-basis of 250px */
   margin: 0 10px; /* Adjust margin as needed */
 }
+
+// Pet Card (account)
+.pet-card {
+  // Ensure the card does not expand with content
+  width: 100%;
+  max-width: 540px; // Adjust as needed
+
+  // Styling for the card itself
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px; // Classy border-radius
+  overflow: hidden; // Ensures that child elements do not break the rounded corners
+
+  .pet-card-body {
+    padding: 20px; // Add some padding inside the card
+  }
+
+  .card-title {
+    font-size: 1.5rem; // A larger size for the pet name
+    margin-bottom: .5rem; // Spacing between title and text
+  }
+
+  .card-text {
+    font-size: 1rem; // Standard size for the category text
+    color: #6c757d; // A soft color for the text
+  }
+
+  // Styling for the pet image
+  .pet-image {
+    width: 100%; // Ensure the image takes the full width of its container
+    height: auto; // Keep the aspect ratio of the image
+    object-fit: cover; // Cover the area without stretching the image
+    border-top-right-radius: 8px; // Rounded top right corner
+    border-bottom-right-radius: 8px; // Rounded bottom right corner
+  }
+}
