--- a/app/views/services/_services.html.erb
+++ b/app/views/services/_services.html.erb
@@ -2,7 +2,7 @@
 <% services.each do |service| %>
   <div class="col">
     <div class="card" style="position: relative;">
-      <%= cl_image_tag service.photo.key, background: 'black', aspect_ratio: '2.0', crop: :crop, class: "card-service-provider-image" %>
+      <%= cl_image_tag service.service_picture.key, background: 'black', aspect_ratio: '2.0', crop: :crop, class: "card-service-provider-image" %>
       <div class="card-body">
         <div class="card-title-and-tags">
           <h5 class="card-title" style="margin-bottom: 0;"><%= service.title.capitalize %></h5>
