--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -16,7 +16,7 @@
           </div>
           <!-- Provider Info -->
           <div class="col-md-8">
-            <div class="card-body">
+            <div class="card-body" style="border-radius: 15px">
               <h2 class="mb-0"><%= @service.user.first_name %> <%= @service.user.last_name.chars.first %>.</h2>
               <p class="text-secondary"><%= @service.address %></p>
           <!-- Ratings with FontAwesome Stars -->
@@ -42,29 +42,17 @@
 
     <div class="card shadow flex-fill w-75 h-75 sticky-top" style="border-radius: 15px">
         <div class="card-body">
-         <h5 class="card-title">Reviews for <%= @service.title %></h5>
-          <br>
-          <% reviews = @service.bookings.includes(:review).map(&:review).compact %>
-          <% if reviews.any? %>
-          <% reviews.each_with_index do |review, index| %>
-              <div class="rating">
-                <% review.rating.times do %>
-                  <i class="fas fa-star text-warning"></i>
-                <% end %>
-                <% (5 - review.rating).times do %>
-                  <i class="fas fa-star"></i>
-                <% end %>
+          <h5 class="card-title">Book <%= @service.user.first_name %> - Service: <%= @service.title %></h5>
+          <%= simple_form_for([@service, @service.bookings.new], wrapper: :vertical_form, html: { class: 'form-horizontal' }) do |f| %>
+            <div class="form-row">
+              <div class="form-group col-md-8">
+                <%= f.input :date, as: :string, label: 'Choose a date', input_html: { data: { controller: "datepicker" } }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
+                <%= f.input :start_time, as: :time, label: 'Choose a time', input_html: { class: 'form-control' }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
               </div>
-            <div class="review">
-              <p><%= review.description %></p>
-              <% if index < reviews.length - 1 %>
-                <hr>
-              <% end %>
             </div>
+            <%= 'Price' : @service.price %>
+            <%= f.button :submit, "Book Now", class: "btn btn-primary btn-lg btn-block" %>
           <% end %>
-        <% else %>
-          <p>No reviews yet for this service.</p>
-        <% end %>
         </div>
     </div>
 
@@ -81,27 +69,40 @@
         </div>
       </div>
 
-      <!-- Booking Form Section-->
-      <div class="card shadow mb-3" style="height: 400px; border-radius: 15px;">
-        <div class="card-body">
-          <h5 class="card-title">Book <%= @service.user.first_name %> - Service: <%= @service.title %></h5>
-          <%= simple_form_for([@service, @service.bookings.new], wrapper: :vertical_form, html: { class: 'form-horizontal' }) do |f| %>
-            <div class="form-row">
-              <div class="form-group col-md-8">
-                <%= f.input :date, as: :string, label: 'Choose a date', input_html: { data: { controller: "datepicker" } }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
-                <%= f.input :start_time, as: :time, label: 'Choose a time', input_html: { class: 'form-control' }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
-              </div>
-            </div>
-            <%= f.button :submit, "Book Now", class: "btn btn-primary btn-lg btn-block" %>
-          <% end %>
-        </div>
-      </div>
-
       <!-- Map Section -->
       <div class="d-flex mb-3">
         <div class="card shadow w-100" style="height: 400px; border-radius: 15px;">
           <img src="https://pbs.twimg.com/media/EW2R5lAX0AUmRUj.jpg" alt="Map of Paris" style="height: 100%; width: 100%; object-fit: cover; border-radius: 15px;">
         </div>      <!-- Include map initialization script here -->
+      </div>
+
+      <!-- Reviews Section-->
+      <div class="card shadow mb-3" style="height: 150px; border-radius: 15px;">
+        <div class="card-body">
+          <h5 class="card-title">Reviews for <%= @service.title %></h5>
+            <br>
+            <% reviews = @service.bookings.includes(:review).map(&:review).compact %>
+            <% if reviews.any? %>
+            <% reviews.each_with_index do |review, index| %>
+                <div class="rating">
+                  <% review.rating.times do %>
+                    <i class="fas fa-star text-warning"></i>
+                  <% end %>
+                  <% (5 - review.rating).times do %>
+                    <i class="fas fa-star"></i>
+                  <% end %>
+                </div>
+              <div class="review">
+                <p><%= review.description %></p>
+                <% if index < reviews.length - 1 %>
+                  <hr>
+                <% end %>
+              </div>
+            <% end %>
+          <% else %>
+            <p>No reviews yet for this service.</p>
+          <% end %>
+        </div>
       </div>
 
     <!-- About Section -->
