--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -152,45 +152,72 @@
 
     <div class="tab-pane fade" id="my-bookings" role="tabpanel" aria-labelledby="my-bookings-tab">
       <!-- My Bookings information goes here -->
-      <div id="my-bookings">
-      <div class="row">
-        <% @bookings.each do |booking| %>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title"><%= booking.service.title %></h5>
-                <p class="card-text"><strong>Start Time:</strong> <%= booking.start_time.strftime("%B %d, %Y %H:%M") %></p>
-                <p class="card-text"><strong>Address:</strong> <%= booking.service.address %></p>
-                <%= link_to 'View Booking', booking_path(booking), class: 'btn btn-primary' %>
-                <%= link_to 'Delete', booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger' %>
+      <div id="my-bookings-content">
+        <div class="row mt-4">
+        <!-- Trigger/Open The Modal -->
+        <button class="btn btn-primary mb-4">Book now</button>
+            <% @bookings.each do |booking| %>
+            <div class="col-md-4 mb-3">
+              <div class="booking-card">
+                <div class="booking-image" style="background-image: url('<%= url_for(booking.service.service_picture) %>');">
+                  <div class="booking-icons">
+                    <!-- Add icons and links as per your requirement -->
+                    <%= link_to edit_booking_path(booking), class: 'edit-icon' do %>
+                      <i class="fa-regular fa-pen-to-square"></i>
+                    <% end %>
+                    <%= link_to booking_path(booking), class: 'delete-icon' do %>
+                      <i class="fa-regular fa-circle-xmark"></i>
+                    <% end %>
+                  </div>
+                </div>
+                <div class="booking-details">
+                  <h5 class="booking-title"><%= booking.service.title %></h5>
+                  <p class="provider-name">
+                    <%= booking.service.user.first_name %> <%= booking.service.user.last_name.chars.first %>.
+                  </p>
+                  <p class="booking-datetime"><%= booking.start_time.strftime("%B %d, %Y %H:%M") %></p>
+                  <p class="provider-address"><%= booking.service.address %></p>
+                </div>
               </div>
             </div>
-          </div>
-        <% end %>
+          <% end %>
+        </div>
       </div>
-    </div>
     </div>
 
     <div class="tab-pane fade" id="my-reviews" role="tabpanel" aria-labelledby="my-reviews-tab">
       <!-- My Reviews information goes here -->
-      <div id="my-reviews">
-      <div class="row">
-        <% @user.reviews.each do |review| %>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title"><%= review.booking.service.title %></h5>
-                <p class="card-text"><strong>Start Time:</strong> <%= review.booking.start_time.strftime("%B %d, %Y %H:%M") %></p>
-                <p class="card-text"><strong>Address:</strong> <%= review.booking.service.address %></p>
-                <%= link_to 'View Booking', booking_path(review.booking), class: 'btn btn-primary' %>
-                <%= link_to 'Delete', booking_path(review.booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger' %>
-              </div>
-            </div>
-          </div>
-        <% end %>
+      <div id="my-reviews-content">
+        <div class="row mt-4">
+          <% @services.each do |service| %>
+            <% service.bookings.each do |booking| %>
+              <% if booking.review.present? %>
+                <div class="col-md-4 mb-3">
+                  <div class="review-card">
+                    <div class="review-details">
+                      <p class="reviewer-name">
+                        <%= booking.user.first_name %> <%= booking.user.last_name.chars.first %>.
+                      </p>
+                      <p class="review-rating">
+                        <% rating = booking.review.rating %>
+                        <% 5.times do |i| %>
+                          <i class="fas fa-star <%= 'text-warning' if i < rating %>"></i>
+                        <% end %>
+                      </p>
+                      <p class="review-comment">
+                        <%= booking.review.description %>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+            <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
-    </div>
+
+
   </div>
 </div>
 </div>
