Added reviews and icons on services index

--- a/app/assets/stylesheets/pages/_services_index.scss
+++ b/app/assets/stylesheets/pages/_services_index.scss
@@ -99,14 +99,24 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
+  margin-bottom: .3em;
 }
 
-.tag-icon {
-  border: 1px solid black;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  text-align: center;
+// .tag-icon {
+//   border: 1px solid black;
+//   border-radius: 50%;
+//   width: 25px;
+//   height: 25px;
+//   text-align: center;
+// }
+
+.icon-tag {
+  // green
+  // filter: invert(53%) sepia(57%) saturate(481%) hue-rotate(112deg) brightness(91%) contrast(85%);
+  // orange
+  // filter: invert(34%) sepia(76%) saturate(1473%) hue-rotate(2deg) brightness(97%) contrast(100%);
+  // purple
+  filter: invert(37%) sepia(19%) saturate(1346%) hue-rotate(212deg) brightness(100%) contrast(86%);
 }
 
 .card-price-and-details-btn {
