--- a/app/views/services/_services.html.erb
+++ b/app/views/services/_services.html.erb
@@ -5,11 +5,30 @@
       <%= cl_image_tag service.service_picture.key, background: 'black', aspect_ratio: '2.0', crop: :crop, class: "card-service-provider-image" %>
       <div class="card-body">
         <div class="card-title-and-tags">
-          <h5 class="card-title" style="margin-bottom: 0;"><%= service.title.capitalize %></h5>
+          <div class="card-title-and-rating">
+            <h5 class="card-title" style="margin-bottom: 0;"><%= service.title.capitalize %></h5>
+            <div style="font-size: 0.8em;">
+              <% if service.bookings.count.positive? %>
+                <% average_rating = service.average_rating %>
+                <% 5.times do |i| %>
+                  <i class="fas fa-star <%= 'text-warning' if i < average_rating %>"></i>
+                <% end %>
+                <span>(<%= average_rating.round(1) %>)</span>
+              <% else %>
+                <p>No reviews yet.</p>
+              <% end %>
+            </div>
+          </div>
           <div class="pet_categories">
+          <ul class="list-inline">
           <% service.pet_categories.each do |pet_category| %>
-            <p><%= pet_category.pet_category %></p>
+            <li class="list-inline-item">
+              <% pet = pet_category.pet_category.downcase.gsub(' ', '-') %>
+              <!-- <%= pet_category.pet_category %> -->
+              <%= image_tag "icons/#{pet}.svg", class: "icon icon-tag" %>
+            </li>
           <% end %>
+          </ul>
           </div>
         </div>
         <h5 class="card-service-provider"><%= "#{service.user.first_name} #{service.user.last_name}" %></h5>
