--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -9,7 +9,13 @@
       <%= f.input :description, as: :text, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
     </div>
     <div class="form-group">
-      <%= f.input :pet_category_ids, collection: PetCategory.all, as: :check_boxes, label_method: :pet_category, value_method: :id, label_html: { class: 'form-label' }, input_html: { multiple: true, class: 'form-check-input' } %>
+      <%= f.input :address,
+        input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+        wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+      %>
+    </div>
+    <div class="form-group">
+      <%= f.input :pet_category_ids, collection: PetCategory.all, as: :check_boxes, label_method: :pet_category, value_method: :id, label_html: { class: 'form-label' }, input_html: { multiple: true, class: 'form-check-input' }, label: "For which animal(s) ?" %>
     </div>
     <div class="form-group">
       <%= f.input :price, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
