--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -108,4 +108,31 @@
   opacity: 0.8;
 }
 
-/* Add more styles as per your design requirements */
+.review-card {
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  padding: 15px;
+}
+
+.reviewer-info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.reviewer-avatar {
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.review-timestamp {
+  font-size: 0.8em;
+  color: grey;
+  margin-left: auto; /* Push to the right */
+}
+
+.review-comment {
+  font-style: italic;
+  color: grey;
+}
