--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -70,10 +70,20 @@
       </div>
 
       <!-- Map Section -->
+      <!--
       <div class="d-flex mb-3">
         <div class="card shadow w-100" style="height: 400px; border-radius: 15px;">
           <img src="https://pbs.twimg.com/media/EW2R5lAX0AUmRUj.jpg" alt="Map of Paris" style="height: 100%; width: 100%; object-fit: cover; border-radius: 15px;">
-        </div>      <!-- Include map initialization script here -->
+        </div>
+      </div>
+       -->
+      <div class="d-flex mb-3">
+        <div style="width: 500px; height: 500px;"
+              class="custom-map"
+              data-controller="map"
+              data-map-markers-value="<%= @markers.to_json %>"
+              data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
       </div>
 
       <!-- Reviews Section-->
