--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -108,4 +108,13 @@
   opacity: 0.8;
 }
 
+.card-custom {
+  background: white;
+  padding: 2em;
+  margin-left: 0;
+  border: 1px solid #D6D6D6;
+  border-radius: 15px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 /* Add more styles as per your design requirements */
