--- a/app/assets/stylesheets/pages/_services_add.scss
+++ b/app/assets/stylesheets/pages/_services_add.scss
@@ -64,7 +64,7 @@
   display: flex;
 }
 
-.edit-icon, .delete-icon, .view-icon {
+.edit-icon, .edit-icon-user, .delete-icon, .view-icon {
   color: white; /* Change to your preferred icon color */
   margin-left: 10px;
   font-size: 1.5rem;
@@ -80,4 +80,22 @@
 
 .view-icon:hover {
   color: #155946;
+}
+
+.user-card-container:hover .edit-icon-user {
+  display: block;
+  color: #E05901;
+}
+
+.user-card-container {
+  position: relative;
+}
+
+.edit-icon-user {
+  position: absolute;
+  bottom: 10px; /* Adjust as needed */
+  right: 20px; /* Adjust as needed */
+  font-size: 20px; /* Adjust as needed */
+  color: #155946; /* Adjust the color as needed */
+  display: none;
 }
