--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<body class="homepage">
 <div class="banner" data-controller="video">
   <video autoplay muted loop id="myVideo" data-target="video.source">
     <source src="https://res.cloudinary.com/dhhdyxvne/video/upload/f_auto:video,q_auto/v1/development/u4syoxj2xhz2axgrr44o.mp4" type="video/mp4">
@@ -11,7 +12,7 @@
 </div>
 <br>
 <div class="container my-5">
-  <h2 class="mb-4">Services tailored for every pet</h2>
+  <h2 class="mb-4" style="color:#6959A5">Services tailored for every pet</h2>
   <div class="d-flex justify-content-between align-items-center" data-controller="scroll"> <!-- Wrapper for cards and arrows -->
     <button data-action="click->scroll#scrollLeft" class="btn-scroll">&#10094;</button>
         <div class="card-container" data-scroll-target="cards">
@@ -158,3 +159,4 @@
     </div>
   </div>
 </div>
+</body>
