--- a/app/views/services/_services.html.erb
+++ b/app/views/services/_services.html.erb
@@ -6,7 +6,7 @@
       <div class="card-body">
         <div class="card-title-and-tags">
           <div class="card-title-and-rating">
-            <h5 class="card-title" style="margin-bottom: 0;"><%= service.title.capitalize %></h5>
+            <h5 class="card-title" style="margin-bottom: 0;"><%= service.title %></h5>
             <div style="font-size: 0.8em;">
               <% if service.bookings.count.positive? %>
                 <% average_rating = service.average_rating %>
@@ -32,7 +32,7 @@
           </div>
         </div>
         <h5 class="card-service-provider"><%= "#{service.user.first_name} #{service.user.last_name}" %></h5>
-        <p class="card-text"><%= service.user.address %></p>
+        <p class="card-text"><%= service.address %></p>
         <div class="card-price-and-details-btn">
           <b class="card-service-price"><%= service.price %> €</b>
           <%= link_to "see details", service_path(service), class: "btn btn-primary"%>
