--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,4 +1,4 @@
-<div class="service-form-container my-5">
+<div class="service-form-container my-5 mt-30">
   <h2 class="text-center mb-4">What service do you want to add?</h2>
 
   <%= simple_form_for(@service, html: { class: 'form-service' }) do |f| %>
