--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,9 +1,8 @@
   <!-- Booking Form -->
     <div class="col-md-6">
-      <div class="card shadow my-4" style="height: 400px; border-radius: 15px;">
         <div class="card-body">
-          <h5 class="card-title">Book <%= @service.user.first_name %> - Service: <%= @service.title %></h5>
-          <%= simple_form_for([@service, @service.bookings.new], wrapper: :vertical_form, html: { class: 'form-horizontal' }) do |f| %>
+          <h5 class="card-title">Edit your booking</h5>
+          <%= simple_form_for([@booking], wrapper: :vertical_form, html: { class: 'form-horizontal' }) do |f| %>
             <div class="form-row">
               <div class="form-group col-md-8">
                 <%= f.input :date, as: :string, label: 'Choose a date', input_html: { data: { controller: "datepicker" } }, wrapper_html: { class: 'mb-3' }, minute_step: 30 %>
@@ -13,7 +12,4 @@
             <%= f.button :submit, "Book Now", class: "btn btn-primary btn-lg btn-block" %>
           <% end %>
         </div>
-      </div>
-    </div>
-  </div>
 </div>
