--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,36 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="edit-profile-container mt-5">
+  <h2 class="text-center mb-4">Edit My Profile</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-edit-profile' }) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <div class="form-inputs">
+      <%= f.input :first_name, required: true, autofocus: true, input_html: { class: 'form-control sleek-input' }, wrapper_html: { class: 'form-group sleek-group' } %>
+      <%= f.input :last_name, required: true, input_html: { class: 'form-control sleek-input' }, wrapper_html: { class: 'form-group sleek-group' } %>
+      <%= f.input :profile_picture, as: :file, input_html: { class: 'form-control-file sleek-file-input' }, wrapper_html: { class: 'form-group sleek-file-group' } %>
+      <%= f.input :about, as: :text, input_html: { class: 'form-control sleek-input' }, wrapper_html: { class: 'form-group sleek-group' } %>
+      <%= f.input :address, required: true, input_html: { class: 'form-control sleek-input' }, wrapper_html: { class: 'form-group sleek-group' } %>
+      <%= f.input :email, required: true, input_html: { class: 'form-control sleek-input', autocomplete: 'email' }, wrapper_html: { class: 'form-group sleek-group' } %>
+      <%= f.input :password, required: true, hint: "#{@minimum_password_length} characters minimum", input_html: { class: 'form-control sleek-password-input', autocomplete: 'new-password' }, wrapper_html: { class: 'form-group sleek-password-group' } %>
+      <%= f.input :password_confirmation, required: true, input_html: { class: 'form-control sleek-password-confirmation-input', autocomplete: 'new-password' }, wrapper_html: { class: 'form-group sleek-password-confirmation-group' } %>
+    </div>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+    <div class="form-actions text-center">
+      <%= f.button :submit, "Update Profile", class: 'btn btn-primary btn-sleek-update' %>
+    </div>
+  <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+  <div class="text-center mt-4">
+    <%= render "devise/shared/links" %>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
+<div class="cancel-account-section text-center mt-5">
+  <h3 class="cancel-account-title">Cancel My Account</h3>
+  <p class="cancel-account-description">Unhappy with our service? We're sorry to see you go.</p>
+  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-cancel-account" %>
+</div>
 
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+<div class="back-link text-center mt-4">
+  <%= link_to "Back", :back, class: "btn btn-back" %>
+</div>
