--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-4">
 <!-- User Card -->
-<div class="mb-4 d-flex align-items-center">
+<div class="mb-4 d-flex align-items-center user-card-container">
   <!-- Profile Image -->
   <div class="profile-picture mr-4" style="margin-right: 30px">
     <% if current_user.profile_picture.attached? %>
@@ -15,6 +15,9 @@
     <div class="card-body">
       <div class="d-flex justify-content-between">
         <!-- User Info Section -->
+        <%= link_to edit_user_registration_path(@user), class: 'edit-icon-user' do %>
+          <i class="fa-regular fa-pen-to-square"></i>
+        <% end %>
         <div>
           <h2 class="user-name mb-2"><%= @user.first_name %> <%= @user.last_name %></h2>
           <p class="user-info mb-2"><%= @user.address %></p>
@@ -52,18 +55,18 @@
 
 <div class="container">
   <!-- Nav tabs -->
-  <ul class="nav nav-tabs" id="accountTabs" role="tablist">
+  <ul class="nav nav-tabs" id="accountTabs" role="tablist" data-controller="tab">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active user-info mb-2" id="my-pet-tab" data-bs-toggle="tab" data-bs-target="#my-pet" type="button" role="tab" aria-controls="my-pet" aria-selected="true">My Pet</button>
+      <button class="nav-link active user-info mb-2" id="my-pet-tab" data-bs-toggle="tab" data-bs-target="#my-pet" type="button" role="tab" aria-controls="my-pet" aria-selected="true" data-tab-target="tab">My Pet</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link user-info mb-2" id="my-services-tab" data-bs-toggle="tab" data-bs-target="#my-services" type="button" role="tab" aria-controls="my-services" aria-selected="false">My Services</button>
+      <button class="nav-link user-info mb-2" id="my-services-tab" data-bs-toggle="tab" data-bs-target="#my-services" type="button" role="tab" aria-controls="my-services" aria-selected="false" data-tab-target="tab">My Services</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link user-info mb-2" id="my-bookings-tab" data-bs-toggle="tab" data-bs-target="#my-bookings" type="button" role="tab" aria-controls="my-bookings" aria-selected="false">My Bookings</button>
+      <button class="nav-link user-info mb-2" id="my-bookings-tab" data-bs-toggle="tab" data-bs-target="#my-bookings" type="button" role="tab" aria-controls="my-bookings" aria-selected="false" data-tab-target="tab">My Bookings</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link user-info mb-2" id="my-reviews-tab" data-bs-toggle="tab" data-bs-target="#my-reviews" type="button" role="tab" aria-controls="my-reviews" aria-selected="false">My Reviews</button>
+      <button class="nav-link user-info mb-2" id="my-reviews-tab" data-bs-toggle="tab" data-bs-target="#my-reviews" type="button" role="tab" aria-controls="my-reviews" aria-selected="false" data-tab-target="tab">My Reviews</button>
     </li>
   </ul>
 
@@ -115,7 +118,7 @@
     <% end %>
     </div>
 
-    <div class="tab-pane fade" id="my-services" role="tabpanel" aria-labelledby="my-services-tab">
+    <div class="tab-pane fade" role="tabpanel" aria-labelledby="my-services-tab">
       <!-- My Services information goes here -->
       <div id="my-services">
         <div class="row mt-4">
@@ -142,7 +145,7 @@
                   </div>
                   <div class="card-title-and-tags">
                     <div class="card-title-and-rating">
-                      <h5 class="card-title" style="margin-bottom: 0;"><%= service.title.capitalize %></h5>
+                      <h5 class="card-title" style="margin-bottom: 0;"><%= service.title %></h5>
                       <div style="font-size: 0.8em;">
                         <%# Rating display logic %>
                         <% if service.bookings.count.positive? %>
@@ -168,7 +171,7 @@
                     </div>
                   </div>
                   <h5 class="card-service-provider"><%= "#{service.user.first_name} #{service.user.last_name.chars.first}." %></h5>
-                  <p class="card-text"><%= service.user.address %></p>
+                  <p class="card-text"><%= service.address %></p>
                   <div class="card-price-and-details-btn">
                     <b class="card-service-price"><%= service.price %> €</b>
                   </div>
@@ -186,8 +189,7 @@
       <!-- My Bookings information goes here -->
       <div id="my-bookings-content">
         <div class="row mt-4">
-        <!-- Trigger/Open The Modal -->
-        <button class="btn btn-primary mb-4">Book now</button>
+        <%= link_to 'Book now', services_path, class: 'btn btn-primary mb-4' %>
             <% @bookings.each do |booking| %>
             <div class="col-md-4 mb-3">
               <div class="booking-card">
@@ -197,7 +199,7 @@
                     <%= link_to edit_booking_path(booking), class: 'edit-icon' do %>
                       <i class="fa-regular fa-pen-to-square"></i>
                     <% end %>
-                    <%= link_to booking_path(booking), class: 'delete-icon' do %>
+                    <%= link_to booking_path(booking), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: 'delete-icon' do %>
                       <i class="fa-regular fa-circle-xmark"></i>
                     <% end %>
                   </div>
