seed and service tab

--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -118,7 +118,7 @@
     <% end %>
     </div>
 
-    <div class="tab-pane fade" role="tabpanel" aria-labelledby="my-services-tab">
+    <div class="tab-pane fade" id="my-services" role="tabpanel" aria-labelledby="my-services-tab">
       <!-- My Services information goes here -->
       <div id="my-services">
         <div class="row mt-4">
